--- a/Application/Home/View/Cart/lst.html
+++ b/Application/Home/View/Cart/lst.html
@@ -32,42 +32,24 @@
             </tr>
         </thead>
         <tbody>
+            <volist name="data" id="vo">
             <tr>
-                <td class="col1"><a href=""><img src="/Public/images/cart_goods1.jpg" alt="" /></a>  <strong><a href="">【1111购物狂欢节】惠JackJones杰克琼斯纯羊毛菱形格</a></strong></td>
-                <td class="col2"> <p>颜色：073深红</p> <p>尺码：170/92A/S</p> </td>
-                <td class="col3">￥<span>499.00</span></td>
+                <td class="col1"><a href="{:U('/home/goods/detail/',array('id'=>$vo['goods_id']))}"><img src="/Public/Uploads/{$vo.sm_logo}" alt="" /></a> <strong><a href="{:U('/home/goods/detail/',array('id'=>$vo['goods_id']))}">{$vo.goods_name}</a></strong></td>
+                <td class="col2">
+                    <volist name="vo['attr_str']" id="vv">
+                    <p>{$vv.attr_str}</p>
+                    </volist>
+                </td>
+                <td class="col3">￥<span>{$vo.goods_price}</span></td>
                 <td class="col4"> 
                     <a href="javascript:;" class="reduce_num"></a>
-                    <input type="text" name="amount" value="1" class="amount"/>
+                    <input type="text" name="amount" value="{$vo.goods_number}" class="amount"/>
                     <a href="javascript:;" class="add_num"></a>
                 </td>
-                <td class="col5">￥<span>499.00</span></td>
+                <td class="col5">￥<span>{$vo['goods_price'] * $vo['goods_number']}</span></td>
                 <td class="col6"><a href="">删除</a></td>
             </tr>
-            <tr>
-                <td class="col1"><a href=""><img src="/Public/images/cart_goods2.jpg" alt="" /></a> <strong><a href="">九牧王王正品新款时尚休闲中长款茄克EK01357200</a></strong></td>
-                <td class="col2"> <p>颜色：淡蓝色</p> <p>尺码：165/88</p></td>
-                <td class="col3">￥<span>1102.00</span></td>
-                <td class="col4"> 
-                    <a href="javascript:;" class="reduce_num"></a>
-                    <input type="text" name="amount" value="1" class="amount"/>
-                    <a href="javascript:;" class="add_num"></a>
-                </td>
-                <td class="col5">￥<span>1102.00</span></td>
-                <td class="col6"><a href="">删除</a></td>
-            </tr>
-            <tr>
-                <td class="col1"><a href=""><img src="/Public/images/cart_goods3.jpg" alt="" /></a> <strong><a href="">【1111购物狂欢节】捷王纯手工缝制休闲男鞋大头皮鞋 头层牛</a></strong></td>
-                <td class="col2"> <p>颜色：0922红棕现货</p> <p>尺码：40现货</p></td>
-                <td class="col3">￥<span>269.00</span></td>
-                <td class="col4"> 
-                    <a href="javascript:;" class="reduce_num"></a>
-                    <input type="text" name="amount" value="1" class="amount"/>
-                    <a href="javascript:;" class="add_num"></a>
-                </td>
-                <td class="col5">￥<span>269.00</span></td>
-                <td class="col6"><a href="">删除</a></td>
-            </tr>
+            </volist>
         </tbody>
         <tfoot>
             <tr>
