完成加入购物车

--- a/Application/Home/View/Layout/header.html
+++ b/Application/Home/View/Layout/header.html
@@ -71,7 +71,7 @@ $data = $model->getCateData();
         <div class="cart fl">
             <dl>
                 <dt>
-                    <a href="">去购物车结算</a>
+                    <a href="{:U('home/cart/lst/')}">去购物车结算</a>
                     <b></b>
                 </dt>
                 <dd>
