--- a/Application/Home/View/Layout/header.html
+++ b/Application/Home/View/Layout/header.html
@@ -6,7 +6,7 @@ $data = $model->getCateData();
 <div class="header w1210 bc mt15">
     <!-- 头部上半部分 start 包括 logo、搜索、用户中心和购物车结算 -->
     <div class="logo w1210">
-        <h1 class="fl"><a href="index.html"><img src="/Public/images/logo.png" alt="京西商城"></a></h1>
+        <h1 class="fl"><a href="/"><img src="/Public/images/logo.png" alt="京西商城"></a></h1>
         <!-- 头部搜索 start -->
         <div class="search fl">
             <div class="search_form">
@@ -139,3 +139,29 @@ $data = $model->getCateData();
 
 <div style="clear:both;"></div>
 
+<script type="text/javascript">
+    // 将该商品存入COOKIE中,并读取最近浏览过的商品
+    $.ajax({
+        type: "get",
+        url: "{:U('/home/goods/getRecentlyGoods/', array('id'=>I('get.id',0)))}",
+        dataType: "json",
+        success: function (data) {
+            var html1 = '';
+            var html2 = '';
+            var len = getJsonObjLength(data) - 1;
+            $(data).each(function (k, v) {
+                var url = "{:U('/home/goods/detail/id/" + v.id + "')}";
+                var img = "/Public/Uploads/" + v.sm_logo;
+                html1 += '<li><a href="' + url + '"><img src="' + img + '" alt="" /></a></li>';
+                html2 += '<dl';
+                if (k !== len) {
+                    html2 += ' class="last"';
+                }
+                html2 += '><dt><a href="' + url + '"><img src="' + img + '" alt="" /></a></dt><dd><a href="' + url + '">' + v.goods_name + '</a></dd></dl>';
+
+            });
+            $('#recentlyGoods').html(html1);
+            $('#left_recently_goods').html(html2);
+        }
+    });
+</script>
