--- a/Application/Home/View/Order/success.html
+++ b/Application/Home/View/Order/success.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="success_bd">
 		<p><span></span>订单提交成功，我们将及时为您处理</p>
-		
+                <div align="center" style="margin: 20px">{$html}</div>
 		<p class="message">完成支付后，你可以 <a href="">查看订单状态</a>  <a href="">继续购物</a> <a href="">问题反馈</a></p>
 	</div>
 </div>
